--------------------------------------------------------------------------
---------                Ampache -- CHANGELOG                    ---------   
--------------------------------------------------------------------------

--------------------------------------------------------------------------
  v.3.6-Alpha2
        - Fixed session handling to actually use our custom handler
                (reported by ss23)
        - Fixed Last.FM art method (reported by claudio)
        - Updated Captcha PHP to 2.3
        - Updated getID3 to 1.9.1
        - Updated PHPMailer to 5.2.0
        - Fixed bug in MPD module which affected toggling random or repeat 
                (patch from jherold)
        - Properly escape config values when writing ampache.cfg.php
        - Fixed session persistence with auth disabled (reported by Nathanael
                Anderson)
        - Fixed item count retention for Advanced Random (reported by USAF_Pride) 
        - Made catalog verify respect memory_cache
        - Some catalog operations are now done in chunks, which works better on
                large catalogs
        - API now returns year and bitrate for songs
        - Fixed search_songs API method to use Search::run properly
        - Fixed require_session when auth_type is 'local'
        - Catalog filtering fix
        - Toggle artwork with a button instead of a checkbox (patch from mywindow)
        - API handshake code cleanup, including a bugfix from postfuturist
        - Improved install process when JavaScript is disabled
        - Updated getID3 to 1.8.5
        - Fixed duplicate searching even more
        - Committed minor bugfixes for Penguin theme
        - Added Fresh theme
        - Fixed spurious API handshake failure output


--------------------------------------------------------------------------
  v.3.6-Alpha1 04/27/2011
        - Fixed forced transcoding
        - Fixed display during catalog updates (reported by Demonic)